--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
   </head>
   <body>
     <main>
-      <!-- Header -->
-      <header class="header">
+      <div class="fixed-header">
+        <nav class="content navbar">
+          <!-- Logo -->
+          <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
+
+          <!-- Navigation -->
+          <ul>
+            <li><a href="#!">Home</a></li>
+            <li><a href="#!">Features</a></li>
+            <li><a href="#!">Services</a></li>
+            <li><a href="#!">Resources</a></li>
+            <li><a href="#!">Contact</a></li>
+          </ul>
+
+          <!-- Action -->
+          <div class="actions">
+            <a href="#!" class="action-link">Sign In</a>
+            <a href="#!" class="btn action-btn">Sign Up</a>
+          </div>
+        </nav>
+      </div>
+
+      <!-- Hero -->
+      <div class="hero-wrap">
         <div class="content">
-          <nav class="navbar">
-            <!-- Logo -->
-            <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
-
-            <!-- Navigation -->
-            <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
-            </ul>
-
-            <!-- Action -->
-            <div class="actions">
-              <a href="#!" class="action-link">Sign In</a>
-              <a href="#!" class="btn action-btn">Sign Up</a>
-            </div>
-          </nav>
-
-          <!-- Hero -->
           <div class="hero">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
@@ -54,7 +55,7 @@
             />
           </div>
         </div>
-      </header>
+      </div>
 
       <!-- Clients -->
       <div class="clients">
