--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <main>
+    <main id="home">
       <div class="fixed-header">
         <nav class="content navbar">
           <!-- Logo -->
@@ -18,11 +18,11 @@
 
           <!-- Navigation -->
           <ul>
-            <li><a href="#!">Home</a></li>
-            <li><a href="#!">Features</a></li>
-            <li><a href="#!">Services</a></li>
-            <li><a href="#!">Resources</a></li>
-            <li><a href="#!">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#guides">Services</a></li>
+            <li><a href="#featured">Features</a></li>
+            <li><a href="#stats">Resources</a></li>
+            <li><a href="#footer">Contact</a></li>
           </ul>
 
           <!-- Action -->
@@ -58,7 +58,7 @@
       </div>
 
       <!-- Clients -->
-      <div class="clients">
+      <div class="clients" id="clients">
         <div class="content">
           <div class="row">
             <img src="./assets/img/Logo.svg" alt="Besnik." />
@@ -81,7 +81,7 @@
       </div>
 
       <!-- Guides -->
-      <div class="guides">
+      <div class="guides" id="guides">
         <div class="content">
           <h2 class="sub-title">How its works?</h2>
           <p class="desc">
@@ -129,7 +129,7 @@
       </div>
 
       <!-- Featured -->
-      <div class="featured">
+      <div class="featured" id="featured">
         <div class="content">
           <header>
             <h2 class="sub-title">Featured Properties</h2>
@@ -240,7 +240,7 @@
       </div>
 
       <!-- Stats -->
-      <div class="stats">
+      <div class="stats" id="stats">
         <div class="content">
           <div class="row">
             <div class="img-block">
@@ -378,7 +378,7 @@
       </div>
 
       <!-- Subscription -->
-      <div class="subscription">
+      <div class="subscription" id="subscription">
         <div class="content">
           <div class="body">
             <div class="info">
@@ -394,7 +394,7 @@
       </div>
 
       <!-- Footer -->
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="content">
           <div class="row">
             <div class="column">
