--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <main id="home">
-      <div class="fixed-header">
-        <nav class="content navbar">
-          <!-- Logo -->
-          <a href="#!"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
+    <div class="fixed-header">
+      <nav class="content navbar">
+        <!-- Logo -->
+        <a href="#"><img src="./assets/img/Logo.svg" alt="Besnik." /></a>
 
-          <!-- Navigation -->
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#guides">Services</a></li>
-            <li><a href="#featured">Features</a></li>
-            <li><a href="#stats">Resources</a></li>
-            <li><a href="#footer">Contact</a></li>
-          </ul>
+        <!-- Navigation -->
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#guides">Services</a></li>
+          <li><a href="#featured">Features</a></li>
+          <li><a href="#stats">Resources</a></li>
+          <li><a href="#footer">Contact</a></li>
+        </ul>
 
-          <!-- Action -->
-          <div class="actions">
-            <a href="#!" class="action-link">Sign In</a>
-            <a href="#!" class="btn action-btn">Sign Up</a>
-          </div>
-        </nav>
-      </div>
-
+        <!-- Action -->
+        <div class="actions">
+          <a href="#!" class="action-link">Sign In</a>
+          <a href="#!" class="btn action-btn">Sign Up</a>
+        </div>
+      </nav>
+    </div>
+    <main>
       <!-- Hero -->
       <div class="hero-wrap">
         <div class="content">
@@ -392,67 +391,66 @@
           </div>
         </div>
       </div>
-
-      <!-- Footer -->
-      <footer class="footer" id="footer">
-        <div class="content">
-          <div class="row">
-            <div class="column">
-              <h3 class="heading">Product</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Listing</a></li>
-                <li class="item"><a href="#!">Property</a></li>
-                <li class="item"><a href="#!">Agents</a></li>
-                <li class="item"><a href="#!">Blog</a></li>
-              </ul>
-            </div>
-
-            <div class="column">
-              <h3 class="heading">Resources</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Our Homes</a></li>
-                <li class="item"><a href="#!">Member Stories</a></li>
-                <li class="item"><a href="#!">Video</a></li>
-                <li class="item"><a href="#!">Free trial</a></li>
-              </ul>
-            </div>
-
-            <div class="column">
-              <h3 class="heading">Company</h3>
-              <ul class="list">
-                <li class="item"><a href="#!">Patnerships</a></li>
-                <li class="item"><a href="#!">Terms of use</a></li>
-                <li class="item"><a href="#!">Privacy</a></li>
-                <li class="item"><a href="#!">Sitemap</a></li>
-              </ul>
-            </div>
-            <div class="column">
-              <h3 class="heading">Get in touch</h3>
-              <p class="line-clamp" style="--line-clamp: 3">
-                You’ll find your next home, in any style you prefer.
-              </p>
-              <div class="social-icon">
-                <a href="#!"
-                  ><img src="./assets/img/Facebook icon.svg" alt="#"
-                /></a>
-                <a href="#!"
-                  ><img src="./assets/img/twitter icon.svg" alt="#"
-                /></a>
-                <a href="#!"
-                  ><img src="./assets/img/lindedin icon.svg" alt="#"
-                /></a>
-              </div>
-            </div>
+    </main>
+    <!-- Footer -->
+    <footer class="footer" id="footer">
+      <div class="content">
+        <div class="row">
+          <div class="column">
+            <h3 class="heading">Product</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Listing</a></li>
+              <li class="item"><a href="#!">Property</a></li>
+              <li class="item"><a href="#!">Agents</a></li>
+              <li class="item"><a href="#!">Blog</a></li>
+            </ul>
           </div>
 
-          <div class="row">
-            <a href="#!"
-              ><img src="./assets/img/Logo.svg" alt="Besnik." class="logo"
-            /></a>
-            <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+          <div class="column">
+            <h3 class="heading">Resources</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Our Homes</a></li>
+              <li class="item"><a href="#!">Member Stories</a></li>
+              <li class="item"><a href="#!">Video</a></li>
+              <li class="item"><a href="#!">Free trial</a></li>
+            </ul>
+          </div>
+
+          <div class="column">
+            <h3 class="heading">Company</h3>
+            <ul class="list">
+              <li class="item"><a href="#!">Patnerships</a></li>
+              <li class="item"><a href="#!">Terms of use</a></li>
+              <li class="item"><a href="#!">Privacy</a></li>
+              <li class="item"><a href="#!">Sitemap</a></li>
+            </ul>
+          </div>
+          <div class="column">
+            <h3 class="heading">Get in touch</h3>
+            <p class="line-clamp" style="--line-clamp: 3">
+              You’ll find your next home, in any style you prefer.
+            </p>
+            <div class="social-icon">
+              <a href="#!"
+                ><img src="./assets/img/Facebook icon.svg" alt="#"
+              /></a>
+              <a href="#!"
+                ><img src="./assets/img/twitter icon.svg" alt="#"
+              /></a>
+              <a href="#!"
+                ><img src="./assets/img/lindedin icon.svg" alt="#"
+              /></a>
+            </div>
           </div>
         </div>
-      </footer>
-    </main>
+
+        <div class="row">
+          <a href="#!"
+            ><img src="./assets/img/Logo.svg" alt="Besnik." class="logo"
+          /></a>
+          <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
